[project]
name = "django-blasphemy"
version = "0.1.0"
description = ""
authors = [
    { name = "Ülgen Sarıkavak", email = "ulgensrkvk@gmail.com" },
]
requires-python = ">=3.14"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "celery[redis]==5.6.2",
    "django==6.0.1",
    "django-admin-interface==0.32.0",
    "django-click==2.5.0",
    "django-debug-toolbar==6.1.0",
    "django-dirtyfields==1.9.8",
    "django-environ==0.12",
    "django-extensions==4.1",
    "django-filter==25.2",
    "django-jsonform==2.23.2",
    # Why lite version?
    # https://github.com/daviddrysdale/python-phonenumbers?tab=readme-ov-file#memory-usage
    # Short answer: We don't need geocoder, carrier and timezone info
    "django-phonenumber-field[phonenumberslite]==8.4.0",
    "django-removals==1.1.6",
    # TODO: Consider moving to dev dependencies
    "django-watchfiles==1.4.0",
    "djangorestframework==3.16.1",
    "drf-spectacular==0.29.0",
    "flower==2.0.1",
    "gitpython==3.1.46",
    "gunicorn==23",
    # https://docs.djangoproject.com/en/dev/releases/4.2/#psycopg-3-support
    "psycopg[binary]==3.3.2",
    "pygments==2.19.2",
    "rich==14.2.0",
    "sentry-sdk==2.49.0",
    "whitenoise==6.11.0",
]

[dependency-groups]
dev = [
    "coverage==7.13.1",
    "django-migration-vis==2.0.1",
    "django-upgrade==1.29.1",
    "factory-boy==3.3.3",
    "ipdb==0.13.13",
    "ipython==9.9.0",
    "parameterized==0.9",
    "prek==0.2.27",
    "pydot==4.0.1",                # For visualizing Django models with "graph_models --pydot"
    "ruff==0.14.11",               # Used by Django's find_formatters and run_formatters (with a monkey patch)
    "tblib==3.2.2",                # Enables proper tracebacks when Django tests fail with --parallel
    "wat-inspector==0.4.3",
    "xkcdpass==1.20.0",
]

[tool.uv]
package = false
# The earliest version that supports the current lock file revision
required-version = ">=0.8.4"

[tool.pyproject-fmt]
indent = 4
keep_full_version = true
max_supported_python = "3.14"
