[project]
name = "django-blasphemy"
version = "0.1.0"
description = "An opinionated Django project template for experimentation and prototyping."
license = "BSD-3-Clause"
authors = [
    { name = "Ülgen Sarıkavak", email = "ulgensrkvk@gmail.com" },
]
requires-python = ">=3.14"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "celery[redis]==5.6.2",
    "django==6.0.2",
    "django-admin-interface==0.32.0",
    "django-click==2.5.0",
    "django-debug-toolbar==6.2.0",
    "django-dirtyfields==1.9.9",
    "django-environ==0.12.1",
    "django-extensions==4.1",
    "django-filter==25.2",
    "django-jsonform==2.23.2",
    # Why lite version?
    # https://github.com/daviddrysdale/python-phonenumbers?tab=readme-ov-file#memory-usage
    # Short answer: We don't need geocoder, carrier and timezone info
    "django-phonenumber-field[phonenumberslite]==8.4.0",
    "django-removals==1.1.6",
    # TODO: Consider moving to dev dependencies
    "django-watchfiles==1.4.0",
    "djangorestframework==3.16.1",
    "drf-spectacular==0.29.0",
    "flower==2.0.1",
    "gitpython==3.1.46",
    "gunicorn==25.1.0",
    # https://docs.djangoproject.com/en/dev/releases/4.2/#psycopg-3-support
    "psycopg[binary]==3.3.2",
    "pygments==2.19.2",
    "rich==14.3.2",
    "sentry-sdk==2.52.0",
    "whitenoise==6.11.0",
]

[dependency-groups]
dev = [
    "coverage==7.13.4",
    "django-migration-vis==2.0.1",
    "factory-boy==3.3.3",
    "ipdb==0.13.13",
    "ipython==9.10.0",
    "pydot==4.0.1",                # For visualizing Django models with "graph_models --pydot"
    "ruff==0.15.1",                # Used by Django's find_formatters and run_formatters (with a monkey patch)
    "tblib==3.2.2",                # Enables proper tracebacks when Django tests fail with --parallel
    "unittest-parametrize==1.8.0",
    "wat-inspector==0.4.3",
    "xkcdpass==1.30.0",
]

[tool.uv]
# The earliest version that supports the current lock file revision
required-version = ">=0.8.4"
package = false

[tool.pyproject-fmt]
indent = 4
keep_full_version = true
max_supported_python = "3.14"
